Bug 474228 - Pinning app to task manager from Kicker/Kickoff doesn't work
Summary: Pinning app to task manager from Kicker/Kickoff doesn't work
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-09-06 14:45 UTC by Nicolas Fella
Modified: 2023-09-17 18:14 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-09-06 14:45:50 UTC
STEPS TO REPRODUCE
1. Open Kicker/Kickoff 
2. Right click on an app
3. Pin to Task Manager

OBSERVED RESULT
Nothing

EXPECTED RESULT
The app is pinned to the task manager

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.5.2

ADDITIONAL INFORMATION
Relevant log line:

QMetaObject::invokeMethod: No such method QQuickMouseArea::addLauncher(QVariant)
 
from https://invent.kde.org/plasma/plasma-workspace/-/blob/master/applets/kicker/plugin/containmentinterface.cpp#L162
Comment 1 Nicolas Fella 2023-09-06 14:47:33 UTC
"Add to Desktop" is broken the same way
Comment 2 Nate Graham 2023-09-06 17:18:01 UTC
Can confirm. Console logging looks relevant:

Sep 06 11:16:26 Liberator plasmashell[2072]: QMetaObject::invokeMethod: No such method QQuickMouseArea::hasLauncher(QVariant)
Sep 06 11:16:26 Liberator plasmashell[2072]: QMetaObject::invokeMethod: No such method QQuickMouseArea::addLauncher(QVariant)

Could be a similar issue to Bug 473922 where we're looking for a function by its method signature and that changed in Qt 6.
Comment 3 Bug Janitor Service 2023-09-16 19:37:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3293
Comment 4 Kai Uwe Broulik 2023-09-17 18:14:08 UTC
Git commit 93e609707a5c7fb98209d43759c8751cc8bce603 by Kai Uwe Broulik.
Committed on 17/09/2023 at 20:05.
Pushed by broulik into branch 'master'.

applets/kicker: Invoke addLauncher/hasLauncher on the PlasmoidItem

In Plasma 6, we have a well-defined root item PlasmoidItem which contains those
functions, no need to go hunting for a random object in the tree anymore, which
is incorrect now.

M  +11   -35   applets/kicker/plugin/containmentinterface.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/93e609707a5c7fb98209d43759c8751cc8bce603