applets/kicker: Invoke addLauncher/hasLauncher on the PlasmoidItem

In Plasma 6, we have a well-defined root item PlasmoidItem which contains those
functions, no need to go hunting for a random object in the tree anymore, which
is incorrect now.

BUG: 474228